--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Werkzeug==2.3.7
 python-dotenv==1.0.0
 pandas==2.1.0
 openpyxl==3.1.2
-ifcopenshell==0.7.0.240627
 gunicorn==21.2.0
 flask-cors==4.0.0
+plotly==5.18.0
+dash==2.14.1
+dash-bootstrap-components==1.5.0
